.archive/traefik/traefik-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prometheus-prefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus
