.archive/traefik/prometheus-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-prometheus
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.idcrook.dev`)
      services:
        - name: prometheus
          port: 80
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-prometheus

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.idcrook.dev`)
      services:
        - name: prometheus
          port: 80
      middlewares:
        - name: my-traefik-auth-with-exceptions
        - name: strip-prometheus-prefix

  tls:
    certResolver: wildcardresolver
